# DjangoTask

./: README.md
DjangoApi/: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
DjangoApi/DjangoApi/: __init__.py  settings.py  urls.py  yasg.py
DjangoApi/app/: __init__.py  admin.py  api.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
DjangoApi/app/migrations/: 0001_initial.py  0002_task_delete_tasks.py
