[project]
name = "djandgoapi"
version = "1"
description = "TODO-Api"
authors = [
    {name = "Полина Тригуб PD-87",email = "doc21@inbox.ru"}
]
readme = "README.md"
requires-python = "3.11.4"

[tool.poetry.dependencies]
Django = "^5.1.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-yasg = "^1.21.4"
django-filter = "^23.1"
psycopg2-binary = "^2.9.5"
python = "^3.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
